# cowboy-up

./: .gitignore  README.md  pyproject.toml
cowboy_up/: __init__.py  cli.py  config.py  console.py  field.py  renderer.py  utils.py
cowboy_up.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cowboy_up/commands/: add_field.py  model.py  new.py  setup.py
cowboy_up/templates/common/: app.erl.tmpl  app.src.tmpl  handler.erl.tmpl  home_handler.erl.tmpl  logger.erl.tmpl  nginx_dev.tmpl  nginx_prod.tmpl  page_handler.erl.tmpl  rebar.config.tmpl  sup.erl.tmpl  sys.config.tmpl  systemd.service.tmpl  templates.erl.tmpl  vm.args.tmpl  watcher.erl.tmpl
cowboy_up/templates/css/basic/: about.html.tmpl  app.css.tmpl  base.html.tmpl  home.html.tmpl
cowboy_up/templates/css/daisyui/: about.html.tmpl  app.css.tmpl  base.html.tmpl  error.html.tmpl  home.html.tmpl
cowboy_up/templates/css/pico/: about.html.tmpl  app.css.tmpl  (+3 more)
cowboy_up/templates/models/: migration.erl.tmpl  migrations_registry.erl.tmpl  model.erl.tmpl  seed_migration.erl.tmpl  seed_migration_postgres.erl.tmpl
test_app/: .gitignore  README.md  rebar.config
test_app/config/: sys.config  vm.args
test_app/nginx/: dev.conf  prod.conf
test_app/priv/templates/: about.html
test_app/scripts/: test_app.service
test_app/src/: home_handler.erl  page_handler.erl  test_app.app.src  test_app_app.erl  test_app_db.erl  test_app_handler.erl  test_app_sup.erl  test_app_templates.erl  test_app_watcher.erl
tests/: test_config.py  test_field.py  test_model.py  test_new.py  test_utils.py
(+34 files in other folders)
